# therapy-chatbot

./: .gitignore  .replit  Pasted--1-Introduction-Therapyyy-is-a-therapy-chatbot-designed-for-Telegram-aiming-to-provide-accessib-1732964580471.txt  ai_service.py  analytics.py  app.py  bot_handlers.py  clean_all_records.py  clean_data_script.py  clean_user_faridasadi.py  config.py  context_manager.py  database.py  db.py  db_config.py  error_handlers.py  error_logging.py  main.py  models.py  monitoring.py  package-lock.json  package.json  pyproject.toml  re_engagement.py  subscription.py
templates/: dashboard.html
web/: package-lock.json  package.json  tailwind.config.ts
web/.next/: trace
web/.next/cache/: config.json
web/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
web/.next/server/app/: _not-found_client-reference-manifest.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
web/.next/server/vendor-chunks/: @auth.js  @babel.js  @hookform.js  @panva.js  @swc.js  abort-controller.js  agentkeepalive.js  bcryptjs.js  event-target-shim.js  form-data-encoder.js  formdata-node.js  humanize-ms.js  lru-cache.js  ms.js  next-auth.js  next.js  node-domexception.js  node-fetch.js  oauth.js  object-hash.js  oidc-token-hash.js  openai.js  openid-client.js  preact-render-to-string.js  (+9 more)
web/prisma/: schema.prisma
web/scripts/: generate-secret.js
web/src/app/: layout.tsx  page.tsx
web/src/lib/: db.ts  openai.ts
(+52 files in other folders)
