[project]
name = "repl-nix-therapyyybot"
version = "0.1.0"
description = "Telegram-based AI therapy chatbot"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.9",
    "openai>=1.55.3",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot[job-queue]==20.7",
    "sqlalchemy>=2.0.0",
]
